fix: add zipkin layout

--- a/autoconfigure/urlconnection/pom.xml
+++ b/autoconfigure/urlconnection/pom.xml
@@ -36,4 +36,13 @@
       <artifactId>zipkin-storage-reporter-urlconnection</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
