--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,9 @@
     <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
     <zipkin.version>2.14.2</zipkin.version>
     <brave.version>5.6.3</brave.version>
+    <log4j.version>2.11.2</log4j.version>
 
+    <testcontainers.version>1.11.2</testcontainers.version>
     <junit.version>4.12</junit.version>
     <assertj.version>3.11.1</assertj.version>
   </properties>
@@ -89,6 +91,16 @@
         <groupId>${project.groupId}</groupId>
         <artifactId>zipkin-storage-reporter-urlconnection</artifactId>
         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers</artifactId>
+        <version>${testcontainers.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>kafka</artifactId>
+        <version>${testcontainers.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
