--- a/autoconfigure/kafka/src/main/resources/zipkin-server-kafka-reporter.yml
+++ b/autoconfigure/kafka/src/main/resources/zipkin-server-kafka-reporter.yml
@@ -1,7 +1,7 @@
-# When enabled, this allows shorter env properties (ex -Dspring.profiles.active=urlconnection-reporter)
+# When enabled, this allows shorter env properties (ex -Dspring.profiles.active=kafka-reporter)
 zipkin:
   storage:
     kafka-reporter:
-      endpoint: ${KAFKA_REPORTER_BOOTSTRAP_SERVERS:localhost:9092}
+      bootstrap-servers: ${KAFKA_REPORTER_BOOTSTRAP_SERVERS:localhost:9092}
       encoding: ${KAFKA_REPORTER_ENCODING:JSON}
       topic: ${KAFKA_REPORTER_TOPIC:zipkin}
