--- a/Dockerfile.http
+++ b/Dockerfile.http
@@ -11,12 +11,14 @@ ENV JAVA_OPTS -Djava.security.egd=file:/dev/./urandom
 # Add environment settings for supported storage types
 WORKDIR /zipkin
 
-RUN curl -SL $ZIPKIN_REPO/io/zipkin/zipkin-server/$ZIPKIN_VERSION/zipkin-server-$ZIPKIN_VERSION-exec.jar > zipkin.jar
-
+# RUN curl -SL $ZIPKIN_REPO/io/zipkin/zipkin-server/$ZIPKIN_VERSION/zipkin-server-$ZIPKIN_VERSION-exec.jar > zipkin.jar
+ADD zipkin.jar .
 ADD urlconnection/target/zipkin-storage-reporter-urlconnection-${FORWARDER_STORAGE_VERSION}.jar forwarder.jar
 ADD autoconfigure/urlconnection/target/zipkin-storage-reporter-urlconnection-autoconfigure-${FORWARDER_STORAGE_VERSION}-module.jar forwarder-module.jar
 
-# ENV STORAGE_TYPE=urlconnection-reporter
+ENV STORAGE_TYPE=urlconnection-reporter
+ENV SEARCH_ENABLED=false
+ENV QUERY_ENABLED=false
 
 EXPOSE 9410 9411
 
