--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -60,7 +60,7 @@
           <configuration>
             <!-- https://github.com/spring-projects/spring-boot/issues/3426 transitive exclude doesn't work -->
             <excludeGroupIds>
-              io.zipkin.zipkin2,io.zipkin.reporter2,org.springframework.boot,org.springframework,com.fasterxml.jackson.core,com.google.auto.value,com.google.gson
+              io.zipkin.zipkin2,org.springframework.boot,org.springframework,com.fasterxml.jackson.core,com.google.auto.value,com.google.gson
             </excludeGroupIds>
           </configuration>
         </plugin>
