--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,17 @@
+#
+# Copyright 2019 Jorge Esteban Quilcate Otoya
+#
+# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+# in compliance with the License. You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software distributed under the License
+# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+# or implied. See the License for the specific language governing permissions and limitations under
+# the License.
+#
+
 version: '3'
 services:
   forwarder-http:
@@ -9,6 +23,7 @@ services:
     environment:
       - URLCONNECTION_REPORTER_ENDPOINT=http://zipkin:9411/api/v2/spans
       - URLCONNECTION_REPORTER_ENCODING=PROTO3
+      - ZIPKIN_LOGGING_LEVEL=DEBUG
   forwarder-kafka:
     build:
       context: .
@@ -18,6 +33,7 @@ services:
     environment:
       - KAFKA_REPORTER_BOOTSTRAP_SERVERS=kafka-zookeeper:9092
       - KAFKA_REPORTER_ENCODING=PROTO3
+      - ZIPKIN_LOGGING_LEVEL=DEBUG
   kafka-zookeeper:
     image: openzipkin/zipkin-kafka
     container_name: kafka-zookeeper
@@ -26,10 +42,11 @@ services:
       - 9092:9092
       - 19092:19092
   zipkin:
-    image: openzipkin/zipkin
+    image: openzipkin/zipkin:2.14.2
     ports:
       - 9411:9411
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka-zookeeper:9092
+      - ZIPKIN_LOGGING_LEVEL=DEBUG
     depends_on:
       - kafka-zookeeper
