--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -20,15 +20,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-storage-reporter-parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>zipkin-forwarder-parent</artifactId>
+    <version>0.1.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-storage-reporter-autoconfigure</artifactId>
+  <artifactId>zipkin-forwarder-autoconfigure</artifactId>
   <packaging>pom</packaging>
 
   <modules>
-    <module>urlconnection</module>
+    <module>http</module>
     <module>kafka</module>
   </modules>
 
