--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,11 +20,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-storage-reporter-parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>zipkin-forwarder-parent</artifactId>
+    <version>0.1.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-storage-reporter-core</artifactId>
+  <artifactId>zipkin-forwarder-core</artifactId>
 
   <properties>
     <main.basedir>${project.basedir}/..</main.basedir>
