--- a/http/pom.xml
+++ b/http/pom.xml
@@ -20,29 +20,38 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-forwarder-autoconfigure</artifactId>
+    <artifactId>zipkin-forwarder-parent</artifactId>
     <version>0.1.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-forwarder-kafka-autoconfigure</artifactId>
+  <artifactId>zipkin-forwarder-http</artifactId>
 
   <properties>
-    <main.basedir>${project.basedir}/../..</main.basedir>
+    <main.basedir>${project.basedir}/..</main.basedir>
   </properties>
 
   <dependencies>
     <dependency>
+      <groupId>io.zipkin.reporter2</groupId>
+      <artifactId>zipkin-sender-urlconnection</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.github.jeqo.zipkin</groupId>
-      <artifactId>zipkin-forwarder-kafka</artifactId>
+      <artifactId>zipkin-forwarder-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for test containers -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
