--- a/Dockerfile.http
+++ b/Dockerfile.http
@@ -13,7 +13,7 @@ WORKDIR /zipkin
 
 # RUN curl -SL $ZIPKIN_REPO/io/zipkin/zipkin-server/$ZIPKIN_VERSION/zipkin-server-$ZIPKIN_VERSION-exec.jar > zipkin.jar
 ADD zipkin.jar .
-ADD http/target/zipkin-forwarder-http-${FORWARDER_VERSION}.jar forwarder.jar
+#ADD http/target/zipkin-forwarder-http-${FORWARDER_VERSION}.jar forwarder.jar
 ADD autoconfigure/http/target/zipkin-forwarder-http-autoconfigure-${FORWARDER_VERSION}-module.jar forwarder-module.jar
 
 ENV STORAGE_TYPE=http-forwarder
@@ -24,7 +24,7 @@ EXPOSE 9410 9411
 
 CMD exec java \
     ${JAVA_OPTS} \
-    -Dloader.path='forwarder.jar,forwarder-module.jar' \
+    -Dloader.path='forwarder-module.jar,forwarder-module.jar/lib' \
     -Dspring.profiles.active=http-forwarder \
     -cp zipkin.jar \
     org.springframework.boot.loader.PropertiesLauncher \
