--- a/http/pom.xml
+++ b/http/pom.xml
@@ -33,7 +33,7 @@
   <dependencies>
     <dependency>
       <groupId>io.zipkin.reporter2</groupId>
-      <artifactId>zipkin-sender-urlconnection</artifactId>
+      <artifactId>zipkin-sender-okhttp3</artifactId>
     </dependency>
     <dependency>
       <groupId>io.github.jeqo.zipkin</groupId>
