--- a/http/pom.xml
+++ b/http/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.github.jeqo.zipkin</groupId>
     <artifactId>zipkin-forwarder-parent</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>zipkin-forwarder-http</artifactId>
