--- a/autoconfigure/http/pom.xml
+++ b/autoconfigure/http/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
     <artifactId>zipkin-autoconfigure-storage-forwarder</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
 
   <artifactId>zipkin-autoconfigure-storage-forwarder-http</artifactId>
