--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
     <artifactId>zipkin-storage-forwarder-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
 
   <artifactId>zipkin-storage-forwarder-kafka</artifactId>
