--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,29 @@
-**/\.*
-!.git
-
-**/target
+# https://docs.docker.com/engine/reference/builder/#dockerignore-file
+.git*
+.idea
 **/*.iml
-
-*.md
-
-**/Dockerfile
-travis
+.mvn
 mvnw*
+Makefile
+.*yml
+.editorconfig
+.dockerignore
+.settings.xml
+LICENSE
+docker
+docs
+**/*.md
+**/src/test/**
+**/target
+
+# Install script runs within Docker
+build-bin/**
+!build-bin/maven/maven_build_or_unjar
+!build-bin/maven/maven_unjar
+
+# Allow on-demand "mvn package"
+!**/src/main/**
+!**/pom.xml
+
+# Allow re-use of built artifacts when using "mvn package"
+!./module/target/zipkin-module-storage-forwarder-*-module.jar
