--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.war
-*.ear
-*.jar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 # Maven
 target/
-.mvn/wrapper/MavenWrapperDownloader.java
 
 # IntelliJ
 .idea/
@@ -21,3 +12,8 @@ target/
 
 # macOS
 .DS_Store
+
+# Eclipse
+.classpath
+.project
+.settings/
