[maven-release-plugin] prepare release 0.3.0

--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,12 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
   <artifactId>zipkin-storage-forwarder-parent</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.3.0</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -69,7 +67,7 @@
     <assertj.version>3.18.0</assertj.version>
 
     <!-- override to set exclusions per-project -->
-    <errorprone.args/>
+    <errorprone.args />
     <errorprone.version>2.4.0</errorprone.version>
     <log4j.version>2.14.0</log4j.version>
 
@@ -113,7 +111,7 @@
     <url>https://github.com/openzipkin-contrib/zipkin-storage-forwarder</url>
     <connection>scm:git:https://github.com/openzipkin-contrib/zipkin-storage-forwarder.git</connection>
     <developerConnection>scm:git:https://github.com/openzipkin-contrib/zipkin-storage-forwarder.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.3.0</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
@@ -319,7 +317,7 @@
           <!-- workaround to SUREFIRE-1831 -->
           <useModulePath>false</useModulePath>
           <!-- kafka specific workaround: SUREFIRE-1614 -->
-          <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+          <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
           <!-- Zipkin logs with java.util.logging. Adding the bridge allows allows us to change
                scope and format via log4j2.properties -->
           <systemPropertyVariables>
