--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -23,10 +23,11 @@ jobs:
           path: ~/.docker
           key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
           restore-keys: ${{ runner.os }}-docker
-      - name: Configure Docker Push
-        run: |
+      - name: Docker Push
+        run: |  # GITHUB_REF will be refs/tags/docker-MAJOR.MINOR.PATCH
           build-bin/git/login_git &&
-          build-bin/docker/configure_docker_push
+          build-bin/docker/configure_docker_push &&
+          build-bin/docker_push $(echo ${GITHUB_REF} | cut -d/ -f 3)
         env:
           # GH_USER=<user that created GH_TOKEN>
           GH_USER: ${{ secrets.GH_USER }}
@@ -35,6 +36,3 @@ jobs:
           #   - create via https://github.com/settings/tokens
           #   - needs repo:status, public_repo, write:packages, delete:packages
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      - name: Docker Push
-        # GITHUB_REF will be refs/tags/docker-N.M.L
-        run: build-bin/docker_push $(echo ${GITHUB_REF} | cut -d/ -f 3)
