--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -17,12 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 1  # only needed to get the sha label
-      - name: Cache Docker
-        uses: actions/cache@v2
-        with:
-          path: ~/.docker
-          key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
-          restore-keys: ${{ runner.os }}-docker
+      # We can't cache Docker without using buildx because GH actions restricts /var/lib/docker
+      # That's ok because DOCKER_PARENT_IMAGE is always ghcr.io and local anyway.
       - name: Docker Push
         run: |  # GITHUB_REF will be refs/tags/docker-MAJOR.MINOR.PATCH
           build-bin/git/login_git &&
@@ -36,3 +32,10 @@ jobs:
           #   - create via https://github.com/settings/tokens
           #   - needs repo:status, public_repo, write:packages, delete:packages
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # DOCKERHUB_USER=<typically dockerzipkindeployer>
+          #   - only push top-level projects: zipkin zipkin-aws zipkin-dependencies zipkin-gcp to Docker Hub, only on release
+          #   - login like this: echo "$DOCKERHUB_TOKEN"| docker login -u "$DOCKERHUB_USER" --password-stdin
+          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
+          # DOCKERHUB_TOKEN=<access token for DOCKERHUB_USER>
+          #   -  Access Token from here https://hub.docker.com/settings/security
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
