--- a/pom.xml
+++ b/pom.xml
@@ -574,7 +574,7 @@
               <!-- hush pedantic warnings: we don't put param and return on everything! -->
               <doclint>none</doclint>
               <!-- While we publish modules, our source is pre-Java9 so tell javadoc that. -->
-              <source>8</source>
+              <source>${maven.compiler.release}</source>
             </configuration>
             <executions>
               <execution>
