--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
     <artifactId>zipkin-storage-forwarder-parent</artifactId>
-    <version>0.4.1</version>
+    <version>0.4.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>zipkin-storage-forwarder</artifactId>
